--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 #matrix{
   display: grid;
-  grid-template-columns: auto auto auto auto auto auto auto;
-  margin: 50px;
+  grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
 }
