--- a/src/components/box.css
+++ b/src/components/box.css
@@ -1,8 +1,6 @@
 #box{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid black;
-    font-size: 3em;
-    padding: 30px;
+    border: 1px solid black;
+    padding: 15px;
+    height: 10px;
 }
